@@ -15,6 +15,7 @@
 
 # Under construction
 =sys-boot/grub-1.99
+=sys-boot/calcboot-3.86.3
 
 =sys-kernel/calckernel-3.4.15-r4
 #>=app-misc/cld-meta-10.9.1
