@@ -7,6 +7,7 @@ DIST calcboot-3.82.0.tar.bz2 144044 RMD160 d859d004d3f75c37d4ef5cff762a7813bf845
 DIST calcboot-3.83.0.tar.bz2 144076 RMD160 758be59ca9576b0632da003cf05a691eefd6cf09 SHA1 de8b1dddc086988924cbcf90e61136d5f6c69a62 SHA256 93dfbf7a0204209910bc9df5b39f6e5bfad02aaf37f41bf14ddfb69719a3373a
 DIST calcboot-3.86.1.tar.bz2 45760 RMD160 3d2c151a35117b6163ff028bef9603370574d609 SHA1 fac0e326db2b319f1535c74aa95369b75c756acf SHA256 121532af10b2fa56036c0bbfa6d6389aab6d283e698d3758703a5909750e2f2b
 DIST calcboot-3.86.2.tar.bz2 45770 RMD160 4e456cec5b6c50275dfb2f071b0caf0fbe17f246 SHA1 9f7a3944c7680fc7c130437a785dc55066da27d6 SHA256 ef7abf19acdff0464391e11ac249cb1d9c42e16b85e6805ce9e6d801111b10b5
+DIST calcboot-3.86.3.tar.bz2 49178 RMD160 c551c06a1c39536856f5a077e372f566fff23c42 SHA1 9cd0a33ba50a062b8a80ea7a12a07627fff2d8c0 SHA256 05429041dcb5bd7680cca5430d945dc7b8426b0c632bc789e501eca3aae9b17d
 DIST calcboot-4.02.1.tar.bz2 45786 RMD160 f8abfbdb271e9af3dbc9c828b46b41891ed3ab09 SHA1 853d5e94ff4b160da5297cf1ae559c372f8bc13e SHA256 f6577eaee72b96659693d894b2b118423e716cc5cc0b47f0ff593807ad5324e0
 DIST syslinux-3.75.tar.bz2 3110916 RMD160 05e5202649bbf4c8835df41cd797cd452de65a76 SHA1 8b97a708c1dc8bcb0505fab59b143368ed25b60b SHA256 1161ef0c248b931a872b92b9fe29a1ad54be2428976f19b8d88a8aa95cb3d65f
 DIST syslinux-3.82.tar.bz2 3086896 RMD160 67f15d5436be9697065bfd52de6a864d7aed742a SHA1 e949b13e0ef016ec39f7dafacac722936756f41b SHA256 1dbbf8cfd10fc07187fa8bfede23639fc95314976730f3474cb349e8bf6c6f61
@@ -18,6 +19,7 @@ EBUILD calcboot-3.82.0-r1.ebuild 1598 RMD160 37fe9a71c0e6b5dedc87b3b7c316c2fd1bf
 EBUILD calcboot-3.83.0.ebuild 1598 RMD160 37fe9a71c0e6b5dedc87b3b7c316c2fd1bfd633e SHA1 618de70fc3a47cf1382bd7becb03cac4e8ea4743 SHA256 2d848f319edc1f767bcc1d74ee2c1782bbf2b9615c893298fa286b3292cf561a
 EBUILD calcboot-3.86.1.ebuild 1597 RMD160 154001af6106e6f8995df23d77775c477640cc01 SHA1 6641ed97e34719444eaccd15b9ce7f18a7ef4f7f SHA256 7689ddf1a2f6ddd8e40b0adf6c4466072b4c415a26bb69f9268bd6362ccf4b92
 EBUILD calcboot-3.86.2.ebuild 1597 RMD160 154001af6106e6f8995df23d77775c477640cc01 SHA1 6641ed97e34719444eaccd15b9ce7f18a7ef4f7f SHA256 7689ddf1a2f6ddd8e40b0adf6c4466072b4c415a26bb69f9268bd6362ccf4b92
+EBUILD calcboot-3.86.3.ebuild 1599 RMD160 0521aba5e41e5709dd7ffa53a81d38b47c744d5c SHA1 fb73997eada130a95a76baa7888e5815dffd3ce5 SHA256 be83505b2750318f1838f4ca31514b125c89710fcb78006e4955abc2dac84000
 EBUILD calcboot-4.02.1.ebuild 1550 RMD160 881bd80ddb5367cb58a1d05dbf43aff647faaff0 SHA1 d3088e523d20a9e6042198adbcddb26038d7b0d0 SHA256 3187a8e754229eebc6842f41d2f1781d413491dcf08ec11bb1e4f4212602e4fd
-MISC ChangeLog 1200 RMD160 6ab4f62a6eef60bc027113e74178f04495e545d6 SHA1 f1b4f9d3743ffcdba74d4d32395e013900290b72 SHA256 74b36a709c7fa15fe3bb1f00b324dd46305394f1df45e7883ecbfc74edbadecf
+MISC ChangeLog 1344 RMD160 15667e3e471038b6f342f685a9eae2ac5ba3b7c9 SHA1 8af97ae92bf4cacf463d81c5575569baa27e8faf SHA256 170f30ddcc86204d4dbd3f2615b09fd8ef10275a82a39b23e4c95936459c71d3
 MISC metadata.xml 252 RMD160 e886f2ac14de406bbadb647631df7b3de928794e SHA1 ea46203f8029e9877a5656756196cf6fa4643594 SHA256 4352693c8bde260bfcdaad19c5e9f5e116ae56492f1223d4b3c713b4c24a1997
