@@ -1,6 +1,12 @@
 # ChangeLog for sys-boot/calcboot
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*calcboot-3.86.3 (01 Jun 2011)
+
+  01 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calcboot-3.86.3.ebuild:
+  Add splash for grub2.
 
   22 Dec 2010; Трацевский Александр
   <atratsevskiy@gentoo.org> calcboot-4.02.1.ebuild:
